docker/dangelomagallanes/proyecto/kubernetes/kubernetes/namespacepokeapi.yml
apiVersion: v1
kind: Namespace
metadata:
  name: proyecto-nest
  labels:
    name: proyecto-nest
