docker/dangelomagallanes/proyecto/kubernetes/kubernetes/deploypostgre.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre-deployment
  namespace: proyecto-nest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgre
  template:
    metadata:
      labels:
        app: postgre
    spec:
      containers:
      - name: postgre
        image: dangekid/postgre
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgre-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgre-storage
        persistentVolumeClaim:
          claimName: postgre-pvc
