docker/dangelomagallanes/proyecto/kubernetes/kubernetes/servicepostgre.yml
apiVersion: v1
kind: Service
metadata:
  name: postgre-service
  namespace: proyecto-nest
spec:
  type: NodePort
  selector:
    app: postgre
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
    - name: ssh
      port: 3456
      targetPort: 3456
      nodePort: 30023
